# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = [
    "crates/*",
    "python",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.79"
keywords = ["apachehudi", "hudi", "datalake", "arrow"]
readme = "README.md"
description = "A native Rust library for Apache Hudi"
homepage = "https://github.com/apache/hudi-rs"
repository = "https://github.com/apache/hudi-rs"

[workspace.dependencies]
# arrow
arrow = { version = "= 53.3.0", features = ["pyarrow"] }
arrow-arith = { version = "= 53.3.0" }
arrow-array = { version = "= 53.3.0" }
arrow-buffer = { version = "= 53.3.0" }
arrow-cast = { version = "= 53.3.0" }
arrow-ipc = { version = "= 53.3.0" }
arrow-json = { version = "= 53.3.0" }
arrow-ord = { version = "= 54.0.0" }
arrow-row = { version = "= 53.3.0" }
arrow-schema = { version = "= 53.3.0", features = ["serde"] }
arrow-select = { version = "= 53.3.0" }
object_store = { version = "= 0.11.2", features = ["aws", "azure", "gcp"] }
parquet = { version = "= 53.3.0", features = ["async", "object_store"] }

# datafusion
datafusion = { version = "= 43.0.0" }
datafusion-expr = { version = "= 43.0.0" }
datafusion-common = { version = "= 43.0.0" }
datafusion-physical-expr = { version = "= 43.0.0" }

# serde
percent-encoding = { version = "2.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# "stdlib"
thiserror = { version = "2.0.10" }
bytes = { version = "1" }
chrono = { version = "0.4" }
log = { version = "0.4" }
paste = { version = "1.0.15" }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
url = { version = "2.5" }

# runtime / async
async-recursion = { version = "1.1.1" }
async-trait = { version = "0.1" }
dashmap = { version = "6.1" }
futures = { version = "0.3" }
tokio = { version = "1", features = ["rt-multi-thread"] }
