# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = [
    "crates/*",
    "cpp",
    "python",
]
resolver = "2"

[workspace.package]
version = "0.4.0-dev"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.84"
keywords = ["apachehudi", "hudi", "datalake", "arrow"]
readme = "README.md"
description = "The native Rust implementation for Apache Hudi"
homepage = "https://github.com/apache/hudi-rs"
repository = "https://github.com/apache/hudi-rs"

[workspace.dependencies]
# arrow
arrow = { version = "~54.3" }
arrow-arith = { version = "~54.3" }
arrow-array = { version = "~54.3" }
arrow-buffer = { version = "~54.3" }
arrow-cast = { version = "~54.3" }
arrow-ipc = { version = "~54.3" }
arrow-json = { version = "~54.3" }
arrow-ord = { version = "~54.3" }
arrow-row = { version = "~54.3" }
arrow-schema = { version = "~54.3", features = ["serde"] }
arrow-select = { version = "~54.3" }
object_store = { version = "~0.11", features = ["aws", "azure", "gcp"] }
parquet = { version = "~54.3", features = ["async", "object_store"] }

# avro
apache-avro = { version = "~0.17" }

# datafusion
datafusion = { version = "~45.0" }
datafusion-expr = { version = "~45.0" }
datafusion-common = { version = "~45.0" }
datafusion-physical-expr = { version = "~45.0" }

# serde
percent-encoding = { version = "~2.3" }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }

# "stdlib"
thiserror = { version = "~2.0" }
bytes = { version = "~1.10" }
chrono = { version = "~0.4" }
lazy_static = { version = "~1.5" }
log = { version = "~0.4" }
num-traits = { version = "~0.2" }
once_cell = { version = "~1.21" }
paste = { version = "~1.0" }
strum = { version = "~0.27", features = ["derive"] }
strum_macros = "~0.27"
url = { version = "~2.5" }

# runtime / async
async-recursion = { version = "~1.1" }
async-trait = { version = "~0.1" }
dashmap = { version = "~6.1" }
futures = { version = "~0.3" }
tokio = { version = "~1.45", features = ["rt-multi-thread"] }
