# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = [
    "crates/*",
    "cpp",
    "python",
]
resolver = "2"

[workspace.package]
version = "0.5.0-dev"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"
keywords = ["apachehudi", "hudi", "datalake", "arrow"]
readme = "README.md"
description = "The native Rust implementation for Apache Hudi"
homepage = "https://github.com/apache/hudi-rs"
repository = "https://github.com/apache/hudi-rs"

[workspace.dependencies]
# arrow
arrow = { version = "57" }
arrow-arith = { version = "57" }
arrow-array = { version = "57" }
arrow-buffer = { version = "57" }
arrow-cast = { version = "57" }
arrow-ipc = { version = "57" }
arrow-json = { version = "57" }
arrow-ord = { version = "57" }
arrow-row = { version = "57" }
arrow-schema = { version = "57", features = ["serde"] }
arrow-select = { version = "57" }
object_store = { version = "0.12", features = ["aws", "azure", "gcp"] }
parquet = { version = "57", features = ["async", "object_store"] }

# avro
apache-avro = { version = "0.21", features = ["derive"] }
apache-avro-derive = { version = "0.21" }

# datafusion
datafusion = { version = "51" }
datafusion-expr = { version = "51" }
datafusion-common = { version = "51" }
datafusion-physical-expr = { version = "51" }
datafusion-ffi = { version = "51" }

# serde
percent-encoding = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# "stdlib"
thiserror = { version = "2" }
bytes = { version = "1" }
chrono = { version = "0.4" }
lazy_static = { version = "1" }
log = { version = "0.4" }
num-traits = { version = "0.2" }
once_cell = { version = "1" }
paste = { version = "1" }
strum = { version = "0.27", features = ["derive"] }
strum_macros = { version = "0.27" }
url = { version = "2" }

# runtime / async
async-recursion = { version = "1" }
async-trait = { version = "0.1" }
dashmap = { version = "6" }
futures = { version = "0.3" }
tokio = { version = "1", features = ["rt-multi-thread"] }

# protobuf
prost = { version = "0.13" }

# compression
flate2 = { version = "1" }

# hashing
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
md-5 = { version = "0.10" }

# encoding
base64 = { version = "0.22" }

# testing
serial_test = { version = "3" }
tempfile = { version = "3" }
zip-extract = { version = "0.3" }
