[package]
name = "integration_test"


[dependencies]
hudi = { features=["datafusion"], path="../crates/hudi" }
datafusion = { version = "= 39.0.0" }
datafusion-expr = { version = "= 39.0.0" }
tokio = { version = "1", features = ["rt-multi-thread"] }

strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
url = { version = "2" }
