# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = []

[package]
version = "0.1.0"
name = "integration_test"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75.0"
description = "Integration tests for hudi-rs"


[dependencies]
hudi = { features=["datafusion"], path="../crates/hudi" }
hudi-tests = { path="../crates/tests" }
datafusion = { version = "= 39.0.0" }
datafusion-expr = { version = "= 39.0.0" }
tokio = { version = "1", features = ["rt-multi-thread"] }

strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
url = { version = "2" }
