[package]
name = "hudi-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hudi"
crate-type = ["cdylib"]
doc = false

[dependencies]
# runtime
futures = { workspace = true }
num_cpus = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module", "abi3", "abi3-py38", "gil-refs"]

[dependencies.hudi]
path = "../crates/hudi"
