# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "hudi"
description = "Native Python binding for Apache Hudi, based on hudi-rs."
urls = { repository = "https://github.com/apache/hudi-rs/tree/main/python/" }
requires-python = ">=3.8"
keywords = ["apachehudi", "hudi", "datalake", "arrow"]
license = "Apache License 2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "pyarrow>=8",
    "pyarrow-hotfix",
]

optional-dependencies = { devel = [
    "pytest",
    "coverage",
] }

dynamic = ["version"]

[tool.maturin]
module-name = "hudi._internal"

[tool.ruff]
target-version = 'py38'
lint.mccabe = { max-complexity = 14 }
lint.flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
lint.pydocstyle = { convention = 'google' }
format.quote-style = 'single'
lint.ignore = [
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "D104",
    "I001",
    "UP006",
    "UP007",
    "UP037",
    "E501", # Formatted code may exceed the line length, leading to line-too-long (E501) errors.
]

[tool.mypy]
files = "hudi/*.py"
exclude = "^tests"
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "hudi",
]
