# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "tpch"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tpch"
path = "src/main.rs"

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
comfy-table = "7"
datafusion = { workspace = true }
hudi = { path = "../../crates/hudi", features = ["datafusion"] }
object_store = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tpchgen = "2"
tpchgen-arrow = "2"
serde_yaml = "0.9"
url = { workspace = true }
