# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "hudi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A lightweight CLI for inspecting and diagnosing Apache Hudi tables"

[[bin]]
name = "hudi-cli"
path = "src/main.rs"

[dependencies]
hudi-core = { version = "0.5.0-dev", path = "../core" }

# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { workspace = true }

# Output formatting
serde_json = { workspace = true }
comfy-table = "7"

# Error handling
anyhow = "1"

# Arrow (workspace version)
arrow-schema = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
hudi-test = { path = "../test" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

