# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "hudi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(tarpaulin_include)',
    'cfg(use_arrow_54)',
] }

[dependencies]
# arrow (default version)
arrow = { workspace = true, optional = true }
arrow-arith = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-buffer = { workspace = true, optional = true }
arrow-cast = { workspace = true, optional = true }
arrow-ipc = { workspace = true, optional = true }
arrow-json = { workspace = true, optional = true }
arrow-ord = { workspace = true, optional = true }
arrow-row = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
arrow-select = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }

# arrow-54 (for compatibility with projects using arrow 54)
arrow_v54 = { workspace = true, optional = true }
arrow-arith_v54 = { workspace = true, optional = true }
arrow-array_v54 = { workspace = true, optional = true }
arrow-buffer_v54 = { workspace = true, optional = true }
arrow-cast_v54 = { workspace = true, optional = true }
arrow-ipc_v54 = { workspace = true, optional = true }
arrow-json_v54 = { workspace = true, optional = true }
arrow-ord_v54 = { workspace = true, optional = true }
arrow-row_v54 = { workspace = true, optional = true }
arrow-schema_v54 = { workspace = true, optional = true }
arrow-select_v54 = { workspace = true, optional = true }
object_store_v54 = { workspace = true, optional = true }
parquet_v54 = { workspace = true, optional = true }

# avro
apache-avro = { workspace = true }
apache-avro-derive = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

# "stdlib"
thiserror = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }

# runtime / async
async-recursion = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# protobuf
prost = { workspace = true }

# compression
flate2 = { workspace = true }

# datafusion
datafusion = { workspace = true, optional = true }
datafusion-expr = { workspace = true, optional = true }
datafusion-common = { workspace = true, optional = true }
datafusion-physical-expr = { workspace = true, optional = true }
percent-encoding = { workspace = true }

[dev-dependencies]
hudi-test = { path = "../test", default-features = false }
serial_test = { workspace = true }
tempfile = { workspace = true }

[lints.clippy]
result_large_err = "allow"

[features]
default = ["arrow-default"]

# Arrow version features (mutually exclusive - only enable one)
arrow-default = [
    "dep:arrow",
    "dep:arrow-arith",
    "dep:arrow-array",
    "dep:arrow-buffer",
    "dep:arrow-cast",
    "dep:arrow-ipc",
    "dep:arrow-json",
    "dep:arrow-ord",
    "dep:arrow-row",
    "dep:arrow-schema",
    "dep:arrow-select",
    "dep:object_store",
    "dep:parquet",
    "hudi-test/arrow-default",
]

# Arrow v54 (for projects that require arrow 54)
# Usage: default-features = false, features = ["arrow-54"]
arrow-54 = [
    "dep:arrow_v54",
    "dep:arrow-arith_v54",
    "dep:arrow-array_v54",
    "dep:arrow-buffer_v54",
    "dep:arrow-cast_v54",
    "dep:arrow-ipc_v54",
    "dep:arrow-json_v54",
    "dep:arrow-ord_v54",
    "dep:arrow-row_v54",
    "dep:arrow-schema_v54",
    "dep:arrow-select_v54",
    "dep:object_store_v54",
    "dep:parquet_v54",
    "hudi-test/arrow-54",
]

datafusion = [
    "dep:datafusion",
    "datafusion-expr",
    "datafusion-common",
    "datafusion-physical-expr",
]
